fixed work page on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -292,7 +292,7 @@ input[type=message]{
 /*didn't want to add a media tag here but on smaller screens my last name was too
 long and it was driving me nuts.*/
 @media only screen and (max-width: 410px)  {
-	#headerwrap h1, #aboutwrap h1, #contactwrap h1 {
+	#headerwrap h1, #aboutwrap h1, #contactwrap h1, #workwrap h1, {
 		letter-spacing: 0px;
 		font-size: 65px;
 	}
